[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "semaphore"
description = "Semaphore is the user messaging system for the Rubin Science Platform."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles",
    "arrow",
    "click",
    "fastapi==0.97.0",
    "fastapi-sqlalchemy",
    "gidgethub",
    "httpx",
    "markdown-it-py[linkify,plugins]<3", # for mdformat compatibility
    "mdformat",
    "mdformat-gfm",
    "pydantic<2",
    "python-dateutil",
    "python-multipart",
    "pyyaml",
    "safir>=2.0",
    "starlette==0.27.0",
    "structlog",
    "uvicorn[standard]",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://semaphore.lsst.io"
Source = "https://github.com/lsst-sqre/semaphore"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "coverage[toml]>=5.0.2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "pytest-xdist[psutil]",
]
docs = [
    "documenteer[guide]==1.0.0a1",
    "sphinx-click",
]
lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff>=0.9",
]
tox = [
    "tox>=4.24",
    "tox-uv>=1.25",
]
typing = [
    "mypy>=1.19",
    "types-python-dateutil",
    "types-pyyaml",
]

[tool.black]
line-length = 79

[tool.coverage.run]
parallel = true
branch = true
source = ["semaphore"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
plugins = ["pydantic.mypy"]
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

# Use the generic Ruff configuration in ruff.toml and extend it with only
# project-specific settings.
[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.extend-per-file-ignores]
"src/semaphore/broadcast/markdown.py" = [
    "N805",    # temporary
    "C901",    # temporary
    "PLR0912", # temporary
]
"src/semaphore/config.py" = [
    "FBT001",  # temporary
    "N805",    # temporary
]
"src/semaphore/github/broadcastservices.py" = [
    "PTH119",  # temporary
    "PTH122",  # temporary
    "PTH120",  # temporary
]
"tests/broadcast/markdown_test.py" = [
    "DTZ001",  # temporary
]

[tool.ruff.lint.isort]
known-first-party = ["semaphore", "tests"]

[tool.setuptools_scm]
